<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Finans</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="signInWithFacebook">Sign in with Facebook</string>
    <string name="signInWithEmail">Sign in with Email</string>
    <string name="signInWithAnonymously">Sign in without registration</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>


    <string name="google_maps_key" translatable="false">AIzaSyCoujs0OYiVFqAdFCZ0r0Wj6i2FfQgppOs</string>

    <string name="web_client_id" translatable="false">1015866785-klgvp3eig6pbgg91mfomocuucb3m3ake.apps.googleusercontent.com</string>

    <string name="facebook_app_id" translatable="false">1284252622492329</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1284252622492329</string>
    <string name="facebook_client_token" translatable="false">f7c7cdb14d6dcf8385a579c31a5f2ddc</string>

    <string name="newOperation">New Operation</string>

    <string name="enterPIN">Enter the Pin code</string>
    <string name="repeatPIN">Repeat the Pin</string>
    <string name="pinError">Attempts:</string>

    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <string name="analytics">Analytics</string>
    <string name="more">More</string>

    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="isPassword">Login by PIN code</string>
    <string name="isBiometric">Login by fingerprint</string>
    <string name="isSms">Reading sms</string>

    <string name="exit">Sign Out</string>

    <string name="enterUsername">Enter the user name</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="confirmPassword">Confirm Password</string>

    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="donthaveanAccount">Don\'t have an Account?</string>
    <string name="signup">Sign up</string>

    <string name="back">BACK</string>
    <string name="back2">Back</string>

    <string name="editProfile">Edit Profile</string>
    <string name="questions">Questions</string>
    <string name="abouttheprogram">About the program</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="total">Total</string>

    <string name="main">Main</string>

    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="dateandtime">Date and time</string>
    <string name="repeattheoperation">Repeat</string>
    <string name="note">Note</string>
    <string name="addLocation">Location</string>
    <string name="attachPhoto">Attach a photo</string>
    <string name="scanningReceipt">Scanning the receipt</string>
    <string name="scanningQRcode">Scanning a QR code</string>
    <string name="details">Details</string>

    <string name="resetPassword">Reset Password</string>
    <string name="reset">Reset</string>

    <string name="add">Add</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="translation">Translation</string>

    <string name="profile">Profile</string>

    <string name="save">Save</string>

    <string name="selected_location">Selected Location</string>

    <string name="takeapicture">Take a picture</string>
    <string name="choosefromGallery">Choose from Gallery</string>

    <string name="deleteAccount">Delete Account</string>
    <string name="search">Search</string>

    <string name="update">Change</string>
    <string name="editCategories">Edit Categories</string>
    <string name="editIcon">Icon</string>

    <string name="addCategory">Add category</string>

    <string name="fingerprint">Use fingerprint for</string>

    <string name="incorrectEmail">Incorrect email</string>
    <string name="incorrectPasswordLength">Less than 6 characters</string>
    <string name="incorrectPasswordDigit">Does not contain digits</string>
    <string name="incorrectPasswordCapitalLetter">Does not contain a capital letter</string>
    <string name="incorrectPasswordLowercaseLetter">Does not contain a lowercase letter</string>
    <string name="passwordsNotMatch">Passwords do not match</string>

    <string name="error">Error</string>

    <string name="userNotFound">Invalid email or password</string>
    <string name="userNotFound2">Invalid email</string>

    <string name="userAlreadyRegistered">Such a user is already registered</string>

    <string name="sendEnail">The message was sent to the specified email address</string>

    <string name="internetConnection">No internet connection</string>


    <string name="financialAdvice">Financial advice</string>
    <string name="help">Help</string>


    <string name="aboutProgram">About the program</string>

    <string name="privacyPolicy">Privacy policy</string>


    <string name="str1">Title of the thesis project: "Mobile application for accounting of finances in the Kotlin programming language".</string>
    <string name="str2">The diploma project was completed by: Denis Sergeevich Kulai.</string>
    <string name="str3">Student of BSUIR, group 051091.</string>
    <string name="str4">Software version - 1.0.</string>
    <string name="str5">Required Android version - 10.0 or later</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="mainWindow">Main window</string>
    <string name="mainWindowTxt">   A window where all the operations added by the user are shown to the user. In addition, it is possible to change operations and update data.</string>

    <string name="planningWindow">Planning Window</string>
    <string name="planningWindowTxt">   A window where the user can add their financial plans and perform other operations.</string>

    <string name="analyticsWindow">Analytics Window</string>
    <string name="analyticsWindowTxt">   A window where the user can specify the required period and display statistics in the form of a pie chart.</string>

    <string name="settingsWindow">Settings Window</string>
    <string name="settingsWindowTxt">   A window where the user can edit the application and his profile: currency, language, application theme, enable or disable SMS reading. In addition, you can exit the application. In the user editing window, you can delete the account or change the registration data.</string>
    <string name="delete">Delete</string>category name

    <string name="categoryName">Fill in the category name</string>
    <string name="title">Title</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="areYouSure">Are you sure?</string>

    <string name="isEmailVerified">Waiting for confirmation by email</string>

    <string name="fillInAllFields">Fill in all fields</string>


    <string name="сonversion">Conversion</string>
    <string name="currencyWarning">This currency has already been selected</string>

    <string name="paymentPlanning">Payment planning</string>
    <string name="futurePayments">Your future payments</string>

    <string name="budgets">Budgets</string>
    <string name="spendingPlan">Your spending plan</string>

    <string name="calculator">Сalculator</string>
    <string name="financialCalculations">Financial calculations</string>

    <string name="loanCalculator">Loan Calculator</string>
    <string name="investmentCalculator">Investment Calculator</string>
    <string name="сushionСalculator">Financial Cushion Calculator</string>

    <string name="goals">Goals</string>
    <string name="financialGoals">Your financial goals</string>


    <string name="loan1">Loan amount</string>
    <string name="loan2">Interest rate, % per annum</string>
    <string name="loan3">Term of the loan/loan</string>
    <string name="loan4">Date of issue</string>
    <string name="loan5">Calculate</string>
    <string name="loan6">Amount of payments</string>
    <string name="loan7">Overpayment</string>
    <string name="loan8">Total amount of payments</string>
    <string name="loan9">Percentage of overpayments</string>
    <string name="loan10">End of payments</string>
    <string name="loan11">Percentage greater than 100</string>

    <string name="investment1">Investment amount</string>
    <string name="investment2">Interest rate</string>
    <string name="investment3">Investment period</string>
    <string name="investment4">Initial amount</string>
    <string name="investment5">Amount of income</string>
    <string name="investment6">Total amount</string>

    <string name="financialCushion1">Monthly income</string>
    <string name="financialCushion2">Monthly expenses</string>
    <string name="financialCushion3">Desired period</string>
    <string name="financialCushion5">Required amount</string>

    <string name="balance">Balance</string>

    <string name="makePayment">Make a payment</string>


    <string name="privacyPolicyText">By registering, you agree to the Privacy Policy describing the methods of personal data processing.</string>

    <string name="value">Value</string>

    <string name="date1">Payment due in</string>
    <string name="date11">day(days)</string>
    <string name="date2">delays</string>
    <string name="date3">Payment due today</string>

    <string name="paid">Paid for</string>

    <string name="notification">Notification</string>

    <string name="forPeriod">For the period</string>

    <string name="thisMonth">This month</string>
    <string name="threeMonths">3 months</string>
    <string name="sixMonths">6 months</string>
    <string name="thisYear">This year</string>
    <string name="setUp">Set up</string>

    <string name="fromDate">From the date</string>
    <string name="beforeDate">Before the date</string>

    <string name="report">Create a report</string>


    <string name="user">User</string>
    <string name="dateRegistration">Date of registration</string>
    <string name="totalBalance">Total balance</string>

    <string name="operationsReport">Operations Report</string>
    <string name="chartOperations">Chart of operations for the period</string>
    <string name="emailSent">The report has been sent to your email</string>

    <string name="dateOperation">Date of operation</string>
    <string name="typeOperation">Type of operation</string>
    <string name="сategory">Category</string>
    <string name="amount">The amount</string>

    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="annual">Annual</string>

    <string name="budgetPeriod">Budget period</string>

    <string name="all">All</string>

    <string name="period">Period</string>
    <string name="toPay">To pay</string>

    <string name="toAccount">To the account</string>

    <string name="budget20">Exceeded 80% of the budget</string>

    <string name="budgetOverruns">Budget overruns</string>

    <string name="trend">Spending trend</string>

    <string name="changeBudget">Change the budget</string>
    <string name="totalAmount">Total amount</string>

    <string name="imageRecognized">The image is not recognized</string>

    <string name="accountSetup">Account Setup</string>
    <string name="selectMainAccount">Select the main account</string>
    <string name="newAccount">New account</string>

</resources>