<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.BottomSheetSettingsHelp"
    android:background="@color/background_dark"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/helpExitRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/helpExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="?attr/editTextBackground"
                android:clickable="true"
                android:padding="5dp"
                android:text="@string/exit"
                android:textColor="@color/background3_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/helpExitRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                android:layout_below="@+id/helpExitRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainWindow"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/background3_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainWindowTxt"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:textColor="@color/background3_dark"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="full"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/planningWindow"
                        android:textSize="25sp"
                        android:layout_marginTop="17dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/background3_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/planningWindowTxt"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:textColor="@color/background3_dark"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="full"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/analyticsWindow"
                        android:textSize="25sp"
                        android:layout_marginTop="17dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/background3_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/analyticsWindowTxt"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:textColor="@color/background3_dark"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="full"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsWindow"
                        android:textSize="25sp"
                        android:layout_marginTop="17dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/background3_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsWindowTxt"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:textColor="@color/background3_dark"
                        android:justificationMode="inter_word"
                        android:hyphenationFrequency="full"/>


                </LinearLayout>




            </ScrollView>

        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>