<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:background="@color/background_dark"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/currencyExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:background="?attr/editTextBackground"
                    android:clickable="true"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/background3_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/currency"
                    android:textColor="@color/background3_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currencySave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:padding="5dp"
                    android:background="?attr/editTextBackground"
                    android:text="@string/done"
                    android:textColor="@color/background3_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <androidx.appcompat.widget.SearchView
                android:id="@+id/currencySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textCursorDrawable="@null"
                app:iconifiedByDefault="false"
                app:queryBackground="@null"
                android:background="@color/background2_dark"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currencyRecyclerView"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/currency_item">

            </androidx.recyclerview.widget.RecyclerView>



        </LinearLayout>


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>