<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.BottomSheetFinancialAdvice"
    android:background="@color/background"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/financialAdviceExitRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/financialAdviceExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:background="?attr/editTextBackground"
                    android:clickable="true"
                    android:padding="5dp"
                    android:text="@string/exit"
                    android:textColor="@color/background3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/financialAdviceExitRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutDots"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_above="@+id/bottomRelativeLayout" />

            <RelativeLayout
                android:id="@+id/bottomRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/introNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/next"
                    android:textColor="@color/background3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/introPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/previous"
                    android:textColor="@color/background3"
                    android:textSize="20sp" />

            </RelativeLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layoutDots" />

        </RelativeLayout>



    </RelativeLayout>


</FrameLayout>