<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".plans.calculator.BottomSheetCalculatorChoice">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/plansChoiceExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:background="?attr/editTextBackground"
                        android:clickable="true"
                        android:padding="5dp"
                        android:text="@string/cancel"
                        android:textColor="@color/background3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>



                <LinearLayout
                    android:id="@+id/loanCalculatorLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_20"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RelativeLayout
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loanCalculator"
                            android:layout_centerVertical="true"
                            android:textColor="@color/background3"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/loan" />

                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/investmentCalculatorLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_20"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RelativeLayout
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/investmentCalculator"
                            android:layout_centerVertical="true"
                            android:textColor="@color/background3"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/investment" />

                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/financialCushionCalculatorLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_20"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RelativeLayout
                        android:layout_marginHorizontal="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cornerRadius="20dp">

                        <TextView
                            android:id="@+id/calculatorTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/сushionСalculator"
                            android:textColor="@color/background3"
                            android:layout_centerVertical="true"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/cushion" />

                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </RelativeLayout>


</FrameLayout>